// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/skeleton/demo/active.vue correctly 1`] = `
<div class="xy-skeleton xy-skeleton-active ">
  <!---->
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 38%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/basic.vue correctly 1`] = `
<div class="xy-skeleton ">
  <!---->
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 38%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/children.vue correctly 1`] = `
<div style="width: 100%;" class="xy-space xy-space-vertical">
  <div class="xy-space-item" style="margin-bottom: 16px;">
    <div>
      <h4>Ant Design Vue, a design language</h4>
      <p> We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently. </p>
    </div>
  </div>
  <!---->
  <div class="xy-space-item"><button class="xy-btn xy-btn-default" type="button">
      <!----><span>Show Skeleton</span>
    </button></div>
  <!---->
</div>
`;

exports[`renders ./components/skeleton/demo/complex.vue correctly 1`] = `
<div class="xy-skeleton xy-skeleton-with-avatar ">
  <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-lg xy-skeleton-avatar-circle"></span></div>
  <div class="xy-skeleton-content">
    <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
    <ul class="xy-skeleton-paragraph">
      <li></li>
      <li></li>
      <li></li>
      <li></li>
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/element.vue correctly 1`] = `
<div class="xy-space xy-space-horizontal xy-space-align-center">
  <div class="xy-space-item" style="margin-right: 8px;">
    <div class="xy-skeleton xy-skeleton-element"><span class="xy-skeleton-button"></span></div>
  </div>
  <!---->
  <div class="xy-space-item" style="margin-right: 8px;">
    <div class="xy-skeleton xy-skeleton-element"><span class="xy-skeleton-avatar xy-skeleton-avatar-circle"></span></div>
  </div>
  <!---->
  <div class="xy-space-item">
    <div class="xy-skeleton xy-skeleton-element" style="width: 200px;"><span class="xy-skeleton-input"></span></div>
  </div>
  <!---->
</div>
<br>
<br>
<div class="xy-skeleton xy-skeleton-element"><span class="xy-skeleton-button"></span></div>
<br>
<br>
<div class="xy-skeleton xy-skeleton-element">
  <div class="xy-skeleton-image"><svg viewBox="0 0 1098 1024" xmlns="http://www.w3.org/2000/svg" class="xy-skeleton-image-svg">
      <path d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z" class="xy-skeleton-image-path"></path>
    </svg></div>
</div>
<div class="xy-divider xy-divider-horizontal" role="separator">
  <!---->
</div>
<form style="margin: 16px 0px;" class="xy-form xy-form-inline">
  <div class="xy-form-item">
    <div class="xy-row xy-form-row">
      <div class="xy-col xy-form-item-label"><label class="" title="Active">Active
          <!---->
        </label></div>
      <div class="xy-col xy-form-item-control">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content"><button type="button" role="switch" aria-checked="false" class="xy-switch">
              <div class="xy-switch-handle">
                <!---->
              </div><span class="xy-switch-inner"><span class="xy-switch-inner-checked"><!----></span><span class="xy-switch-inner-unchecked"><!----></span></span>
            </button></div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="xy-form-item">
    <div class="xy-row xy-form-row">
      <div class="xy-col xy-form-item-label"><label class="" title="Button Block">Button Block
          <!---->
        </label></div>
      <div class="xy-col xy-form-item-control">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content"><button type="button" role="switch" aria-checked="false" class="xy-switch">
              <div class="xy-switch-handle">
                <!---->
              </div><span class="xy-switch-inner"><span class="xy-switch-inner-checked"><!----></span><span class="xy-switch-inner-unchecked"><!----></span></span>
            </button></div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="xy-form-item">
    <div class="xy-row xy-form-row">
      <div class="xy-col xy-form-item-label"><label class="" title="Size">Size
          <!---->
        </label></div>
      <div class="xy-col xy-form-item-control">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content">
            <div class="xy-radio-group xy-radio-group-outline"><label class="xy-radio-button-wrapper xy-radio-button-wrapper-checked"><span class="xy-radio-button xy-radio-button-checked"><input type="radio" class="xy-radio-button-input" value="default"><span class="xy-radio-button-inner"></span></span><span>Default</span></label><label class="xy-radio-button-wrapper"><span class="xy-radio-button"><input type="radio" class="xy-radio-button-input" value="large"><span class="xy-radio-button-inner"></span></span><span>Large</span></label><label class="xy-radio-button-wrapper"><span class="xy-radio-button"><input type="radio" class="xy-radio-button-input" value="small"><span class="xy-radio-button-inner"></span></span><span>Small</span></label></div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="xy-form-item">
    <div class="xy-row xy-form-row">
      <div class="xy-col xy-form-item-label"><label class="" title="Button Shape">Button Shape
          <!---->
        </label></div>
      <div class="xy-col xy-form-item-control">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content">
            <div class="xy-radio-group xy-radio-group-outline"><label class="xy-radio-button-wrapper xy-radio-button-wrapper-checked"><span class="xy-radio-button xy-radio-button-checked"><input type="radio" class="xy-radio-button-input" value="default"><span class="xy-radio-button-inner"></span></span><span>Default</span></label><label class="xy-radio-button-wrapper"><span class="xy-radio-button"><input type="radio" class="xy-radio-button-input" value="round"><span class="xy-radio-button-inner"></span></span><span>Round</span></label><label class="xy-radio-button-wrapper"><span class="xy-radio-button"><input type="radio" class="xy-radio-button-input" value="circle"><span class="xy-radio-button-inner"></span></span><span>Circle</span></label></div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div class="xy-form-item">
    <div class="xy-row xy-form-row">
      <div class="xy-col xy-form-item-label"><label class="" title="Avatar Shape">Avatar Shape
          <!---->
        </label></div>
      <div class="xy-col xy-form-item-control">
        <div class="xy-form-item-control-input">
          <div class="xy-form-item-control-input-content">
            <div class="xy-radio-group xy-radio-group-outline"><label class="xy-radio-button-wrapper"><span class="xy-radio-button"><input type="radio" class="xy-radio-button-input" value="square"><span class="xy-radio-button-inner"></span></span><span>Square</span></label><label class="xy-radio-button-wrapper xy-radio-button-wrapper-checked"><span class="xy-radio-button xy-radio-button-checked"><input type="radio" class="xy-radio-button-input" value="circle"><span class="xy-radio-button-inner"></span></span><span>Circle</span></label></div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <!---->
  </div>
</form>
`;

exports[`renders ./components/skeleton/demo/list.vue correctly 1`] = `
<div><button type="button" role="switch" aria-checked="false" class="xy-switch">
    <div class="xy-switch-handle">
      <!---->
    </div><span class="xy-switch-inner"><span class="xy-switch-inner-checked"><!----></span><span class="xy-switch-inner-unchecked"><!----></span></span>
  </button>
  <div class="xy-list xy-list-vertical xy-list-lg xy-list-split">
    <!---->
    <!---->
    <div class="xy-spin-nested-loading">
      <!---->
      <div class="xy-spin-container">
        <ul class="xy-list-items">
          <li class="xy-list-item">
            <div class="xy-list-item-main">
              <div class="xy-skeleton xy-skeleton-with-avatar xy-skeleton-active ">
                <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-lg xy-skeleton-avatar-circle"></span></div>
                <div class="xy-skeleton-content">
                  <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
                  <ul class="xy-skeleton-paragraph">
                    <li></li>
                    <li></li>
                  </ul>
                </div>
              </div>
              <!---->
            </div>
            <div class="xy-list-item-extra">
              <!--v-if-->
            </div>
          </li>
          <li class="xy-list-item">
            <div class="xy-list-item-main">
              <div class="xy-skeleton xy-skeleton-with-avatar xy-skeleton-active ">
                <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-lg xy-skeleton-avatar-circle"></span></div>
                <div class="xy-skeleton-content">
                  <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
                  <ul class="xy-skeleton-paragraph">
                    <li></li>
                    <li></li>
                  </ul>
                </div>
              </div>
              <!---->
            </div>
            <div class="xy-list-item-extra">
              <!--v-if-->
            </div>
          </li>
          <li class="xy-list-item">
            <div class="xy-list-item-main">
              <div class="xy-skeleton xy-skeleton-with-avatar xy-skeleton-active ">
                <div class="xy-skeleton-header"><span class="xy-skeleton-avatar xy-skeleton-avatar-lg xy-skeleton-avatar-circle"></span></div>
                <div class="xy-skeleton-content">
                  <h3 class="xy-skeleton-title" style="width: 50%;"></h3>
                  <ul class="xy-skeleton-paragraph">
                    <li></li>
                    <li></li>
                  </ul>
                </div>
              </div>
              <!---->
            </div>
            <div class="xy-list-item-extra">
              <!--v-if-->
            </div>
          </li>
        </ul>
      </div>
    </div>
    <!---->
    <!---->
  </div>
</div>
`;
